# qrcode-pixel-font

./: LICENSE-OFL  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
tools/: build.py  cli.py
tools/configs/: __init__.py  path_define.py
tools/services/: font_service.py  publish_service.py
www/: index.html
www/css/: index.css
www/js/: app.js
