[project]
name = "qrcode-pixel-font"
version = "0.0.0"
requires-python = ">=3.14"

dependencies = [
    "pixel-font-builder==0.0.52",
    "pixel-font-knife==0.0.24",
    "unicodedata2==17.0.1",
    "qrcode==8.2",
    "pypng>=0.20220715.0",
    "tqdm==4.68.3",
    "loguru==0.7.3",
    "cyclopts==4.20.0",
]
